# parquet2jsonl-rs

./: Cargo.toml
src/: local_io.rs  main.rs
