[package]
name = "parquet2jsonl-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
arrow2 = {version = "0.17.0", features = ["io_parquet", "io_parquet_compression"]}
clap = { version = "4.5.23", features = ["derive"]}
flate2 = "1.0.35"
glob = "0.3.1"
indicatif = "0.17.9"
rayon = "1.10.0"
serde_json = "1.0.133"
zstd = "0.13.2"
